Refinamentos finais no Mobile e Redesign da Home.
Refinamento na Sombra da NavBar ao ativar rolagem - no arquivo JavaScript;
Refinamentos de Layout no Botão de Contato da Section - Home;
Adicionado, conforme o Commit anterior, o SVG da Home nos acessos Mobile e Tablet;
Refinamentos gerais de Interface no acesso Mobile e Tablet.

--- a/index.html
+++ b/index.html
@@ -56,30 +56,30 @@
                         <div class="service_item">
                             <div class="item_icon icon_first"> </div>
                                 <h2> Profissionalismo </h2>
-                                    <p class="service_item_text"> Profissionais especializados para fornecer esse tipo de atendimento. Assim 
-                                    o contratante não precisa se preocupar com este tipo de serviço secundário e pode se focar na atividade 
-                                    fim (core-business) de sua empresa, que é o que gera lucro para a mesma. </p>
+                                    <p class="service_item_text"> <span class="service_text_span">Profissionais especializados para fornecer
+                                    esse tipo de atendimento</span>. Assim o contratante não precisa se preocupar com este tipo de serviço 
+                                    secundário e pode se focar na atividade fim (core-business) de sua empresa, que é o que gera lucro para a mesma. </p>
                         </div>
                         <div class="service_item">
                             <div class="item_icon icon_second"> </div>
                                 <h2> Vigilância Armada </h2>
                                     <p class="service_item_text"> Disponibilização de vigilantes armados formados e com as especializações necessárias 
                                     para o cumprimento das atribuições elencadas para cada um. <span class="service_text_span">Durante o horário 
-                                    comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana.</span> </p>
+                                    comercial ou ainda se estender para uma cobertura de 24 horas 7 dias por semana</span>. </p>
                         </div>
                         <div class="service_item">
                             <div class="item_icon icon_third"> </div>
                                 <h2> Portaria Desarmada </h2>
                                     <p class="service_item_text"> Disponibilização de auxiliares de segurança com especializações para desempenharem papéis 
                                     menos críticos, que não necessitem de vigilantes armados. <span class="service_text_span">Durante o horário comercial 
-                                    ou se estende para uma cobertura de 24 horas 7 dias por semana.</span> </p>
+                                    ou se estende para uma cobertura de 24 horas 7 dias por semana</span>. </p>
                         </div>
                         <div class="service_item">
                             <div class="item_icon icon_four"> </div>
                                 <h2> Recepcionista </h2>
                                     <p class="service_item_text"> Disponibilização de recepcionistas com especializações para desempenharem papéis relacionados a 
                                     recepção de pessoas e atendimento telefônico durante o horário de funcioanamento da empresa. <span class="service_text_span">
-                                    Geralmente durante o horário comercial.</span> </p>
+                                    Geralmente durante o horário comercial</span>. </p>
                         </div>
                     </div>
                 </div>
