Ajustes gerais de Responsividade.
Resolvido o Z-Index nos acessos Mobile, Tablet e Desktop do SVG da Home (estava ficando/bloqueando em cima dos outros elementos ao redimensionar a tela);
Ajustes gerais de Layout/Interface nos acessos Mobile, Tablet e Desktop;
Corrigido bug nos Cards de Serviço no acesso Desktop que estava limitando nos redimensionamentos de tela que cortavam os ícones (devido a um tamanho fixo declarado no modo Tablet que pegou como herança);

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="projects_header">
                         <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
                             <p> Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região. Sabendo
-                            que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessario 
+                            que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessário 
                             criar vantagens competitivas para alavancar essa empresa emergente. </p>
                     </div>
                     <div class="all_projects">
