Implementação do ScrollSmooth.
Implementado o ScrollSmooth, devido à falta de compatibilidade do Safari/Chrome e demais Browsers com o antigo comando implementado no início do Projeto: scroll-behavior: smooth;
O ScrollSmooth foi escrito em VanillaJS e testado em todos os modos de acesso, aparentemente funcionando sem problemas (alguns bugs já foram corrigidos previamente de acordo com pesquisas nos comentários do vídeo do Youtube, que foi pesquisado para essa implementação);
Realmente, como esse Site é CrossBrowser, o ScrollSmoth teve de ser implementado usando VanillaJS e não somente CSS como feito anteriormente.

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             <section id="header">
                 <div class="header container">
                     <div class="nav_bar">
-                        <div class="brand"> <a href="#hero"> <h1 class="brand_title"><span class="brand_span">JPGOBBI</span> Segurança Privada</h1> </a> </div>
+                        <div class="brand"> <a id="brand_hero_link" href="#hero"> <h1 class="brand_title"><span class="brand_span">JPGOBBI</span> Segurança Privada</h1> </a> </div>
                         <div class="nav_list">
                             <div class="hamburger"> <div class="bar"> </div> </div>
                                 <ul>
-                                    <li class="nav_link"> <a href="#hero" data-after="Home" class="active"> Home </a> </li>
-                                    <li class="nav_link"> <a href="#services" data-after="Serviços"> Serviços </a> </li>
-                                    <li class="nav_link"> <a href="#projects" data-after="Sobre"> Sobre </a> </li>
-                                    <li class="nav_link"> <a href="#about" data-after="Agenda"> Agenda </a> </li>
-                                    <li class="nav_link"> <a href="#contact" data-after="Contato"> Contato </a> </li>
+                                    <li class="nav_link"> <a id="hero_link" href="#hero" data-after="Home" class="active"> Home </a> </li>
+                                    <li class="nav_link"> <a id="services_link" href="#services" data-after="Serviços"> Serviços </a> </li>
+                                    <li class="nav_link"> <a id="projects_link" href="#projects" data-after="Sobre"> Sobre </a> </li>
+                                    <li class="nav_link"> <a id="about_link" href="#about" data-after="Agenda"> Agenda </a> </li>
+                                    <li class="nav_link"> <a id="contact_link" href="#contact" data-after="Contato"> Contato </a> </li>
                                 </ul>
                         </div>
                     </div>
