--- a/index.html
+++ b/index.html
@@ -132,49 +132,21 @@
                 </div>
             </section>
             <!-- End Projects Section -->
-
             <!-- About Section -->
-
             <section id="about" class="content_section">
-
                 <div class="about container">
-
-                    <div class="col-left">
-
-                        <div class="about-img">
-
-                            <img src="./images/img-2.png" alt="img"/>
-
-                        </div>
-
+                    <div class="col_left">
+                        <div class="company_logo"> <img src="./images/jpgobbi_logo_withoutbg_cropped.png"/> </div>
                     </div>
-                    <div class="col-right">
-
-                        <h1 class="section-title"> About <span>Me</span> </h1>
-
-                            <h2> Front End Developer </h2>
-
-                                <p>
-
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius
-                                    non illum beatae atque repellat ratione qui veritatis repudiandae adipisci maiores. At
-                                    inventore necessitatibus deserunt exercitationem cumque earum omnis ipsum rem accusantium
-                                    quis, quas quia, accusamus provident suscipit magni! Expedita sint ad dolore, commodi
-                                    labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt reprehenderit
-                                    libero enim!
-
-                                </p>
-
-                                    <a href="#" class="cta"> Download Resume </a>
-
+                    <div class="col_right">
+                        <h1 class="section_title"> Nossa <span class="section_title_span">Agenda</span> </h1>
+                            <p class="col_right_description"> Solicite uma <span class="description_span">consultoria gratuita e agendada diretamente por 
+                            você</span>, com nosso consultores. Preencha o nosso formulário de contato abaixo para que possamos lhe apresentar a melhor 
+                            solução sob medida para a sua empresa! </p>
                     </div>
-
                 </div>
-
             </section>
-
             <!-- End About Section -->
-
             <!-- Contact Section -->
             <section id="contact" class="content_section">
                 <div class="contact container">
