Refinamentos no Footer.
Refinamentos de layout no Footer.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                     <a href="https://www.facebook.com/jpgobbi" target="_blank"> <img src="./icons/facebook.svg" width="100px"/> </a>
                                 </div>
                             </div>
-                                <p> &copy;2020 JPGOBBI Segurança Privada. Todos os direitos reservados. </p>
+                                <p> &copy;2020 <span class="footer_span">JPGOBBI Segurança Privada</span>. Todos os direitos reservados. </p>
                 </div>
             </section>
             <!-- End Footer -->
