Implementação do Mouse Scroll Animation na Section - Home.
Implementada a Animação Mouse Scroll na Section - Home padrão para os três acessos.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <h1> JPGOBBI <span> </span> </h1>
                             <a href="#contact" type="button" class="call_to_action"> Contatar </a>
                     </div>
+                    <div class="middle"> <div class="mouse"> </div> </div>
                 </div>
             </section>
             <!-- End Hero Section -->
