--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                                 </ul>
                         </div>
                     </div>
+                    <div class="progress_bar"> </div>
                 </div>
             </section>
             <!-- End Main Header Menu -->
