Implementação inicial do Formulário de Contato.
Iniciada a implementação inicial do Formulário de Contato da Section - About.

--- a/index.html
+++ b/index.html
@@ -142,8 +142,24 @@
                         você</span>, com nosso consultores. Preencha o nosso formulário de contato abaixo para que possamos lhe apresentar a melhor 
                         solução sob medida para a sua empresa! </p>
                             <div class="col_right">
-                                ...
-                                    
+                                <form class="contact_form">
+                                    <h3 class="form_title"> Informações Iniciais </h3>
+                                        <label for="userName"> Nome Completo <br/> <input type="text" id="userName" class="contact_input" required/> </label> <br/>
+                                        <label for="userPhone"> Telefone <br/> <input type="tel" id="userPhone" class="contact_input" required/> </label> <br/>
+                                        <label for="userEmail"> E-Mail <br/> <input type="email" id="userEmail" class="contact_input" required/> </label>
+                                            <div class="button_box">
+                                                <button type="button" class="form_interact"> Avançar </button>
+                                            </div>
+                                </form>
+                                <form class="contact_form">
+                                    <h3 class="form_title"> Informações Iniciais </h3>
+                                        <label for="userName"> Nome Completo <br/> <input type="text" id="userName" class="contact_input" required/> </label> <br/>
+                                        <label for="userPhone"> Telefone <br/> <input type="tel" id="userPhone" class="contact_input" required/> </label> <br/>
+                                        <label for="userEmail"> E-Mail <br/> <input type="email" id="userEmail" class="contact_input" required/> </label>
+                                            <div class="button_box">
+                                                <button type="button" class="form_interact"> Avançar </button>
+                                            </div>
+                                </form>
                             </div>
                             <div class="col_left">
                                 <div class="company_logo"> <img src="./images/jpgobbi_logo_withoutbg_cropped.png"/> </div>
