Implementação inicial - Formulário de Contato.
Implementação inicial e Redesign completo no Formulário de Contato na Section - About;
Implementada a lógica de exibição inicial.

--- a/index.html
+++ b/index.html
@@ -139,26 +139,33 @@
                 <div class="about container">
                     <h1 class="section_title"> Nossa <span class="section_title_span">Agenda</span> </h1>
                         <p class="col_right_description"> Solicite uma <span class="description_span">consultoria gratuita e agendada diretamente por 
-                        você</span>, com nosso consultores. Preencha o nosso formulário de contato abaixo para que possamos lhe apresentar a melhor 
+                        você</span>, com nossos consultores de segurança. Preencha o nosso formulário de contato abaixo para que possamos lhe apresentar a melhor 
                         solução sob medida para a sua empresa! </p>
                             <div class="col_right">
                                 <form class="contact_form">
-                                    <h3 class="form_title"> Informações Iniciais </h3>
-                                        <label for="userName"> Nome Completo <br/> <input type="text" id="userName" class="contact_input" required/> </label> <br/>
-                                        <label for="userPhone"> Telefone <br/> <input type="tel" id="userPhone" class="contact_input" required/> </label> <br/>
-                                        <label for="userEmail"> E-Mail <br/> <input type="email" id="userEmail" class="contact_input" required/> </label>
-                                            <div class="button_box">
-                                                <button type="button" class="form_interact"> Avançar </button>
-                                            </div>
-                                </form>
-                                <form class="contact_form">
-                                    <h3 class="form_title"> Informações Iniciais </h3>
-                                        <label for="userName"> Nome Completo <br/> <input type="text" id="userName" class="contact_input" required/> </label> <br/>
-                                        <label for="userPhone"> Telefone <br/> <input type="tel" id="userPhone" class="contact_input" required/> </label> <br/>
-                                        <label for="userEmail"> E-Mail <br/> <input type="email" id="userEmail" class="contact_input" required/> </label>
-                                            <div class="button_box">
-                                                <button type="button" class="form_interact"> Avançar </button>
-                                            </div>
+                                    <h1 class="form_title"> Agendar Consultoria </h1>
+                                        <div class="form_div">
+                                            <input type="text" class="form_input" placeholder=" " />
+                                                <label for="" class="form_label"> Nome Completo </label>
+                                        </div>
+                                        <div class="form_div">
+                                            <input type="email" class="form_input" placeholder=" " />
+                                                <label for="" class="form_label"> E-Mail </label>
+                                        </div>
+                                        <div class="form_div">
+                                            <input type="email" class="form_input" placeholder=" " />
+                                                <label for="" class="form_label"> Empresa </label>
+                                        </div>
+                                        <div class="form_div">
+                                            <select id="services" class="form_select">
+                                                <option value="" id="disabled" selected="true" disabled>Serviços Prestados</option>
+                                                <option value="haha">haha1</option>
+                                                <option value="haha">haha2</option>
+                                                <option value="haha">haha3</option>
+                                                <option value="haha">haha4</option>
+                                            </select>
+                                        </div>
+                                            <input type="submit" class="form_button" value="Agendar" />
                                 </form>
                             </div>
                             <div class="col_left">
