Adição final dos campos do Formulário de Contato.
Adicionados todos os campos necessários para o Formulário de Contato na Section - About;
Estrutura HTML, a princípio finalizada.

--- a/index.html
+++ b/index.html
@@ -150,20 +150,24 @@
                                         </div>
                                         <div class="form_div">
                                             <input type="email" class="form_input" placeholder=" " />
-                                                <label for="" class="form_label"> E-Mail </label>
-                                        </div>
-                                        <div class="form_div">
-                                            <input type="email" class="form_input" placeholder=" " />
                                                 <label for="" class="form_label"> Empresa </label>
                                         </div>
                                         <div class="form_div">
                                             <select id="services" class="form_select">
-                                                <option value="" id="disabled" selected="true" disabled>Serviços Prestados</option>
-                                                <option value="haha">haha1</option>
-                                                <option value="haha">haha2</option>
-                                                <option value="haha">haha3</option>
-                                                <option value="haha">haha4</option>
+                                                <option value="" id="disabled" selected="true" disabled>Tipo de Atendimento</option>
+                                                <option class="haha" value="haha">haha1</option>
+                                                <option class="haha" value="haha">haha2</option>
+                                                <option class="haha" value="haha">haha3</option>
+                                                <option class="haha" value="haha">haha4</option>
                                             </select>
+                                        </div>
+                                        <div class="form_div">
+                                            <textarea type="email" class="form_input" placeholder=" " rows="5" cols="20"></textarea>
+                                                <label for="" class="form_label"> Informações Adicionais </label>
+                                        </div> <br/><br/><br/><br/><br/>
+                                        <div class="form_div">
+                                            <input type="email" class="form_input" placeholder=" " />
+                                                <label for="" class="form_label"> E-Mail </label>
                                         </div>
                                             <input type="submit" class="form_button" value="Agendar" />
                                 </form>
