Remoção do Formulário de Contato.
Removido o Formulário de Contato da Section - About;
Agora essa Section é - Clientes que conterá os "testemunhos" dos atendimentos prestados pela empresa.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                     <li class="nav_link"> <a id="hero_link" href="#hero" data-after="Home" class="active"> Home </a> </li>
                                     <li class="nav_link"> <a id="services_link" href="#services" data-after="Serviços"> Serviços </a> </li>
                                     <li class="nav_link"> <a id="projects_link" href="#projects" data-after="Sobre"> Sobre </a> </li>
-                                    <li class="nav_link"> <a id="about_link" href="#about" data-after="Agenda"> Agenda </a> </li>
+                                    <li class="nav_link"> <a id="about_link" href="#about" data-after="Clientes"> Clientes </a> </li>
                                     <li class="nav_link"> <a id="contact_link" href="#contact" data-after="Contato"> Contato </a> </li>
                                 </ul>
                         </div>
@@ -137,40 +137,11 @@
             <!-- About Section -->
             <section id="about" class="content_section">
                 <div class="about container">
-                    <h1 class="section_title"> Nossa <span class="section_title_span">Agenda</span> </h1>
+                    <h1 class="section_title"> Nossos <span class="section_title_span">Clientes</span> </h1>
                         <p class="col_right_description"> Solicite uma <span class="description_span">consultoria gratuita e agendada diretamente por 
                         você</span>, com nossos consultores de segurança. Preencha o nosso formulário de contato abaixo para que possamos lhe apresentar a melhor 
                         solução sob medida para a sua empresa! </p>
                             <div class="col_right">
-                                <form class="contact_form">
-                                    <h1 class="form_title"> Agendar Consultoria </h1>
-                                        <div class="form_div">
-                                            <input type="text" class="form_input" placeholder=" " />
-                                                <label for="" class="form_label"> Nome Completo </label>
-                                        </div>
-                                        <div class="form_div">
-                                            <input type="email" class="form_input" placeholder=" " />
-                                                <label for="" class="form_label"> Empresa </label>
-                                        </div>
-                                        <div class="form_div">
-                                            <select id="services" class="form_select">
-                                                <option value="" id="disabled" selected="true" disabled>Tipo de Atendimento</option>
-                                                <option class="haha" value="haha">haha1</option>
-                                                <option class="haha" value="haha">haha2</option>
-                                                <option class="haha" value="haha">haha3</option>
-                                                <option class="haha" value="haha">haha4</option>
-                                            </select>
-                                        </div>
-                                        <div class="form_div">
-                                            <textarea type="email" class="form_input" placeholder=" " rows="5" cols="20"></textarea>
-                                                <label for="" class="form_label"> Informações Adicionais </label>
-                                        </div> <br/><br/><br/><br/><br/>
-                                        <div class="form_div">
-                                            <input type="email" class="form_input" placeholder=" " />
-                                                <label for="" class="form_label"> E-Mail </label>
-                                        </div>
-                                            <input type="submit" class="form_button" value="Agendar" />
-                                </form>
                             </div>
                             <div class="col_left">
                                 <div class="company_logo"> <img src="./images/jpgobbi_logo_withoutbg_cropped.png"/> </div>
