Implementação estrutural da Section - Clientes.
Implementada a estrutura inicial da Section - Clientes;
Terá o design padrão da página em Cards;
Alinhamentos e espaçamentos automáticos implementados inicialmente.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
     <html lang="PT-BR">
         <head>
             <meta charset="UTF-8"/>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1"/>
                 <title> JPGOBBI Segurança Privada </title>
                     <link rel="stylesheet" type="text/css" href="./styles.css"/>
                     <link rel="icon" type="image/png" href="./images/jpgobbi_logo_withoutbg_cropped.png"/>
+
+
+
+                    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+
+
         </head>
         <body>
             <!-- Main Header Menu -->
@@ -142,6 +149,56 @@
                         você</span>, com nossos consultores de segurança. Preencha o nosso formulário de contato abaixo para que possamos lhe apresentar a melhor 
                         solução sob medida para a sua empresa! </p>
                             <div class="col_right">
+                                <div class="testimonials_row">
+                                    <div class="testimonials_col">
+                                        <div class="testimonial">
+                                            <div class="client_avatar"> <img src="./images/p1.png"> </div>
+                                            <div class="client_name"> Client Full Name </div>
+                                            <div class="client_evaluation_note">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                                <p class="client_evaluation_testimonial"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
+                                                Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
+                                                and scrambled it to make a type specimen book. </p>
+                                        </div>
+                                    </div>
+                                    <div class="testimonials_col">
+                                        <div class="testimonial">
+                                            <div class="client_avatar"> <img src="./images/p2.png"> </div>
+                                            <div class="client_name"> Client Full Name </div>
+                                            <div class="client_evaluation_note">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                            </div>
+                                                <p class="client_evaluation_testimonial"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
+                                                Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
+                                                and scrambled it to make a type specimen book. </p>
+                                        </div>
+                                    </div>
+                                    <div class="testimonials_col">
+                                        <div class="testimonial">
+                                            <div class="client_avatar"> <img src="./images/p3.png"> </div>
+                                            <div class="client_name"> Client Full Name </div>
+                                            <div class="client_evaluation_note">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                                <i class="far fa-star"></i>
+                                            </div>
+                                                <p class="client_evaluation_testimonial"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
+                                                Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
+                                                and scrambled it to make a type specimen book. </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col_left">
                                 <div class="company_logo"> <img src="./images/jpgobbi_logo_withoutbg_cropped.png"/> </div>
