Refinamentos de Layout e Design na página.
Refinamentos de Layout e Design gerais na página;
Redesign no Botão CTA da Section - Home;
Finalizada "inicialmente" a implementação da Section - Clientes com os cards de depoimentos dos três clientes da empresa.

--- a/index.html
+++ b/index.html
@@ -145,15 +145,14 @@
             <section id="about" class="content_section">
                 <div class="about container">
                     <h1 class="section_title"> Nossos <span class="section_title_span">Clientes</span> </h1>
-                        <p class="col_right_description"> Solicite uma <span class="description_span">consultoria gratuita e agendada diretamente por 
-                        você</span>, com nossos consultores de segurança. Preencha o nosso formulário de contato abaixo para que possamos lhe apresentar a melhor 
-                        solução sob medida para a sua empresa! </p>
+                        <p class="col_right_description"> Nosso comprometimento é lhe proporcionar <span class="description_span">o conforto de saber que o que é seu está sendo protegido do 
+                            jeito certo</span>. Confira abaixo as avaliações e depoimentos dos nossos clientes parceiros ao longo dos nossos x anos de mercado. </p>
                             <div class="col_right">
                                 <div class="testimonials_row">
                                     <div class="testimonials_col">
                                         <div class="testimonial">
-                                            <div class="client_avatar"> <img src="./images/p1.png"> </div>
-                                            <div class="client_name"> Client Full Name </div>
+                                            <div class="client_avatar client_1"> </div>
+                                            <div class="client_name"> Master Power Turbo </div>
                                             <div class="client_evaluation_note">
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
@@ -168,8 +167,8 @@
                                     </div>
                                     <div class="testimonials_col">
                                         <div class="testimonial">
-                                            <div class="client_avatar"> <img src="./images/p2.png"> </div>
-                                            <div class="client_name"> Client Full Name </div>
+                                            <div class="client_avatar client_2"> </div>
+                                            <div class="client_name"> Nelson Metalurgia </div>
                                             <div class="client_evaluation_note">
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
@@ -184,8 +183,8 @@
                                     </div>
                                     <div class="testimonials_col">
                                         <div class="testimonial">
-                                            <div class="client_avatar"> <img src="./images/p3.png"> </div>
-                                            <div class="client_name"> Client Full Name </div>
+                                            <div class="client_avatar"> </div>
+                                            <div class="client_name"> Fenamarco </div>
                                             <div class="client_evaluation_note">
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
