Ajustes de Responsividade - Section - Contact.
Ajustes de responsividade na Section - Contact para os Cards de Contato ficarem Flex - Row nos Tablets que acessam.

--- a/index.html
+++ b/index.html
@@ -210,9 +210,8 @@
                 <div class="contact container">
                     <div>
                         <h1 class="section_title"> Fale <span class="section_title_span">Conosco</span> </h1>
-                            <p> Agora com o nosso novo cantinho virtual, ficou ainda mais fácil para você, Colaborador ou Parceiro, entrar  em contato conosco. Basta 
-                            clicar em um dos cards abaixo que os aplicativos no seu dispositivo abrirão  automaticamente e você poderá iniciar seu contato conosco de 
-                            forma dinâmica e rápida. </p>
+                            <p> <span class="contact_span">Solicite uma consultoria gratuita com nossos consultores de segurança de forma rápida e dinâmica!</span> Clique em um dos cards abaixo e entre 
+                             em contato com a gente para que possamos lhe apresentar a melhor solução sob medida para a sua empresa! </p>
                     </div>
                     <div class="contact_items">
                         <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5554999574777" target="_blank">
